@@ -279,91 +279,113 @@ void add_recordingrule(sqlite3* instance, struct recordingrule const& recordingr
 	
 	if(instance == nullptr) return;
 
-	// Start a database transaction
-	execute_non_query(instance, "begin immediate transaction");
+	// Clone the episode table schema into a temporary table to avoid the WHERE clause problem below
+	execute_non_query(instance, "drop table if exists add_recordingrule_temp");
+	execute_non_query(instance, "create temp table add_recordingrule_temp as select * from episode limit 0");
 
 	try {
 
-		// Add the new recording rule and replace/insert all updated rules for the series
-		auto sql = "replace into recordingrule "
-			"select json_extract(value, '$.RecordingRuleID') as recordingruleid, "
-			"json_extract(value, '$.SeriesID') as seriesid, "
-			"value as data "
-			"from "
-			"json_each((with deviceauth(code) as (select url_encode(group_concat(json_extract(data, '$.DeviceAuth'), '')) from device) "
-			"select nullif(http_request('http://api.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Cmd=add&SeriesID=' || ?1 || "
-			"case when ?2 is null then '' else '&RecentOnly=' || ?2 end || "
-			"case when ?3 is null then '' else '&ChannelOnly=' || decode_channel_id(?3) end || "
-			"case when ?4 is null then '' else '&AfterOriginalAirdateOnly=' || strftime('%s', date(?4, 'unixepoch')) end || "
-			"case when ?5 is null then '' else '&DateTimeOnly=' || ?5 end || "
-			"case when ?6 is null then '' else '&StartPadding=' || ?6 end || "
-			"case when ?7 is null then '' else '&EndPadding=' || ?7 end), 'null') as data "
-			"from deviceauth))";
-
-		// Prepare the query
-		result = sqlite3_prepare_v2(instance, sql, -1, &statement, nullptr);
-		if(result != SQLITE_OK) throw sqlite_exception(result, sqlite3_errmsg(instance));
+		// Start a database transaction
+		execute_non_query(instance, "begin immediate transaction");
 
 		try {
 
-			// Bind the non-null query parameter(s)
-			result = sqlite3_bind_text(statement, 1, recordingrule.seriesid, -1, SQLITE_STATIC);
-			if((result == SQLITE_OK) && (recordingrule.recentonly)) result = sqlite3_bind_int(statement, 2, 1);
-			if((result == SQLITE_OK) && (recordingrule.channelid.value != 0)) result = sqlite3_bind_int(statement, 3, recordingrule.channelid.value);
-			if((result == SQLITE_OK) && (recordingrule.afteroriginalairdateonly != 0)) result = sqlite3_bind_int(statement, 4, static_cast<int>(recordingrule.afteroriginalairdateonly));
-			if((result == SQLITE_OK) && (recordingrule.datetimeonly != 0)) result = sqlite3_bind_int(statement, 5, static_cast<int>(recordingrule.datetimeonly));
-			if((result == SQLITE_OK) && (recordingrule.startpadding != 30)) result = sqlite3_bind_int(statement, 6, recordingrule.startpadding);
-			if((result == SQLITE_OK) && (recordingrule.endpadding != 30))  result = sqlite3_bind_int(statement, 7, recordingrule.endpadding);
-			if(result != SQLITE_OK) throw sqlite_exception(result);
+			// Add the new recording rule and replace/insert all updated rules for the series
+			auto sql = "replace into recordingrule "
+				"select json_extract(value, '$.RecordingRuleID') as recordingruleid, "
+				"json_extract(value, '$.SeriesID') as seriesid, "
+				"value as data "
+				"from "
+				"json_each((with deviceauth(code) as (select url_encode(group_concat(json_extract(data, '$.DeviceAuth'), '')) from device) "
+				"select nullif(http_request('http://api.hdhomerun.com/api/recording_rules?DeviceAuth=' || coalesce(deviceauth.code, '') || '&Cmd=add&SeriesID=' || ?1 || "
+				"case when ?2 is null then '' else '&RecentOnly=' || ?2 end || "
+				"case when ?3 is null then '' else '&ChannelOnly=' || decode_channel_id(?3) end || "
+				"case when ?4 is null then '' else '&AfterOriginalAirdateOnly=' || strftime('%s', date(?4, 'unixepoch')) end || "
+				"case when ?5 is null then '' else '&DateTimeOnly=' || ?5 end || "
+				"case when ?6 is null then '' else '&StartPadding=' || ?6 end || "
+				"case when ?7 is null then '' else '&EndPadding=' || ?7 end), 'null') as data "
+				"from deviceauth))";
 
-			// Execute the query - no result set is expected
-			result = sqlite3_step(statement);
-			if(result == SQLITE_ROW) throw string_exception(__func__, ": unexpected result set returned from non-query");
-			if(result != SQLITE_DONE) throw sqlite_exception(result, sqlite3_errmsg(instance));
+			// Prepare the query
+			result = sqlite3_prepare_v2(instance, sql, -1, &statement, nullptr);
+			if(result != SQLITE_OK) throw sqlite_exception(result, sqlite3_errmsg(instance));
 
-			sqlite3_finalize(statement);			// Finalize the SQLite statement
+			try {
+
+				// Bind the non-null query parameter(s)
+				result = sqlite3_bind_text(statement, 1, recordingrule.seriesid, -1, SQLITE_STATIC);
+				if((result == SQLITE_OK) && (recordingrule.recentonly)) result = sqlite3_bind_int(statement, 2, 1);
+				if((result == SQLITE_OK) && (recordingrule.channelid.value != 0)) result = sqlite3_bind_int(statement, 3, recordingrule.channelid.value);
+				if((result == SQLITE_OK) && (recordingrule.afteroriginalairdateonly != 0)) result = sqlite3_bind_int(statement, 4, static_cast<int>(recordingrule.afteroriginalairdateonly));
+				if((result == SQLITE_OK) && (recordingrule.datetimeonly != 0)) result = sqlite3_bind_int(statement, 5, static_cast<int>(recordingrule.datetimeonly));
+				if((result == SQLITE_OK) && (recordingrule.startpadding != 30)) result = sqlite3_bind_int(statement, 6, recordingrule.startpadding);
+				if((result == SQLITE_OK) && (recordingrule.endpadding != 30))  result = sqlite3_bind_int(statement, 7, recordingrule.endpadding);
+				if(result != SQLITE_OK) throw sqlite_exception(result);
+
+				// Execute the query - no result set is expected
+				result = sqlite3_step(statement);
+				if(result == SQLITE_ROW) throw string_exception(__func__, ": unexpected result set returned from non-query");
+				if(result != SQLITE_DONE) throw sqlite_exception(result, sqlite3_errmsg(instance));
+
+				sqlite3_finalize(statement);			// Finalize the SQLite statement
+			}
+
+			catch(...) { sqlite3_finalize(statement); throw; }
+
+			//
+			// NOTE: This had to be broken up into a multi-step query involving a temp table to avoid a SQLite bug/feature
+			// wherein using a function (http_request in this case) as part of a column definition is reevaluated when
+			// that column is subsequently used as part of a WHERE clause:
+			//
+			// [http://mailinglists.sqlite.org/cgi-bin/mailman/private/sqlite-users/2015-August/061083.html]
+			//
+			
+			// Update the episode data to take the new recording rule(s) into account; watch out for the web
+			// services returning 'null' on the episode query -- this happens when there are no episodes
+			sql = "with deviceauth(code) as (select url_encode(group_concat(json_extract(data, '$.DeviceAuth'), '')) from device) "
+				"insert into add_recordingrule_temp select ?1 as seriesid, "
+				"http_request('http://api.hdhomerun.com/api/episodes?DeviceAuth=' || coalesce(deviceauth.code, '') || '&SeriesID=' || ?1) as data "
+				"from deviceauth";
+
+			// Prepare the query
+			result = sqlite3_prepare_v2(instance, sql, -1, &statement, nullptr);
+			if(result != SQLITE_OK) throw sqlite_exception(result, sqlite3_errmsg(instance));
+
+			try {
+
+				// Bind the non-null query parameter(s)
+				result = sqlite3_bind_text(statement, 1, recordingrule.seriesid, -1, SQLITE_STATIC);
+				if(result != SQLITE_OK) throw sqlite_exception(result);
+
+				// Execute the query - no result set is expected
+				result = sqlite3_step(statement);
+				if(result == SQLITE_ROW) throw string_exception(__func__, ": unexpected result set returned from non-query");
+				if(result != SQLITE_DONE) throw sqlite_exception(result, sqlite3_errmsg(instance));
+
+				sqlite3_finalize(statement);			// Finalize the SQLite statement
+			}
+
+			catch(...) { sqlite3_finalize(statement); throw; }
+
+			// Complete the replace operation into the episode table from the temporary table that was generated above
+			execute_non_query(instance, "replace into episode select seriesid, data from add_recordingrule_temp where cast(data as text) <> 'null'");
+
+			// Commit the transaction
+			execute_non_query(instance, "commit transaction");
 		}
 
-		catch(...) { sqlite3_finalize(statement); throw; }
+		// Rollback the entire transaction on any failure above
+		catch(...) { try_execute_non_query(instance, "rollback transaction"); throw; }
 
-		// Update the episode data to take the new recording rule(s) into account; watch out for the web
-		// services returning 'null' on the episode query -- this happens when there are no episodes
-		sql = "with deviceauth(code) as (select url_encode(group_concat(json_extract(data, '$.DeviceAuth'), '')) from device) "
-			"replace into episode "
-			"select ?1 as seriesid, "
-			"http_request('http://api.hdhomerun.com/api/episodes?DeviceAuth=' || coalesce(deviceauth.code, '') || '&SeriesID=' || ?1) as data "
-			"from deviceauth "
-			"where cast(data as text) <> 'null'";
+		// Poke the recording engine(s) after a successful rule change; don't worry about exceptions
+		try_execute_non_query(instance, "select http_request(json_extract(data, '$.BaseURL') || '/recording_events.post?sync') from device where type = 'storage'");
 
-		// Prepare the query
-		result = sqlite3_prepare_v2(instance, sql, -1, &statement, nullptr);
-		if(result != SQLITE_OK) throw sqlite_exception(result, sqlite3_errmsg(instance));
-
-		try {
-
-			// Bind the non-null query parameter(s)
-			result = sqlite3_bind_text(statement, 1, recordingrule.seriesid, -1, SQLITE_STATIC);
-			if(result != SQLITE_OK) throw sqlite_exception(result);
-
-			// Execute the query - no result set is expected
-			result = sqlite3_step(statement);
-			if(result == SQLITE_ROW) throw string_exception(__func__, ": unexpected result set returned from non-query");
-			if(result != SQLITE_DONE) throw sqlite_exception(result, sqlite3_errmsg(instance));
-
-			sqlite3_finalize(statement);			// Finalize the SQLite statement
-		}
-
-		catch(...) { sqlite3_finalize(statement); throw; }
-
-		// Commit the transaction
-		execute_non_query(instance, "commit transaction");
+		// Drop the temporary table
+		execute_non_query(instance, "drop table add_recordingrule_temp");
 	}
 
-	// Rollback the entire transaction on any failure above
-	catch(...) { try_execute_non_query(instance, "rollback transaction"); throw; }
-
-	// Poke the recording engine(s) after a successful rule change; don't worry about exceptions
-	try_execute_non_query(instance, "select http_request(json_extract(data, '$.BaseURL') || '/recording_events.post?sync') from device where type = 'storage'");
+	// Drop the temporary table on any exception
+	catch(...) { execute_non_query(instance, "drop table add_recordingrule_temp"); throw; }
 }
 
 //---------------------------------------------------------------------------
@@ -716,13 +738,22 @@ void discover_devices_broadcast(sqlite3* instance)
 
 void discover_devices_http(sqlite3* instance)
 {
-	// Otherwise, discover the devices from the HTTP API and insert them into a temporary table
-	execute_non_query(instance, "insert into discover_device select "
+	//
+	// NOTE: This had to be broken up into a multi-step query involving a temp table to avoid a SQLite bug/feature
+	// wherein using a function (http_request in this case) as part of a column definition is reevaluated when
+	// that column is subsequently used as part of a WHERE clause:
+	//
+	// [http://mailinglists.sqlite.org/cgi-bin/mailman/private/sqlite-users/2015-August/061083.html]
+	//
+
+	// Discover the devices from the HTTP API and insert them into the discover_device temp table
+	execute_non_query(instance, "drop table if exists discover_device_http");
+	execute_non_query(instance, "create temp table discover_device_http as select "
 		"coalesce(json_extract(discovery.value, '$.DeviceID'), json_extract(discovery.value, '$.StorageID')) as deviceid, "
 		"case when json_type(discovery.value, '$.DeviceID') is not null then 'tuner' when json_type(discovery.value, '$.StorageID') is not null then 'storage' else 'unknown' end as type, "
-		"http_request(json_extract(discovery.value, '$.DiscoverURL'), null) as data "
-		"from json_each(http_request('http://api.hdhomerun.com/discover')) as discovery "
-		"where data is not null and json_extract(data, '$.Legacy') is null");
+		"http_request(json_extract(discovery.value, '$.DiscoverURL'), null) as data from json_each(http_request('http://api.hdhomerun.com/discover')) as discovery");
+	execute_non_query(instance, "insert into discover_device select deviceid, type, data from discover_device_http where data is not null and json_extract(data, '$.Legacy') is null");
+	execute_non_query(instance, "drop table discover_device_http");
 }
 
 //---------------------------------------------------------------------------
@@ -910,9 +941,19 @@ void discover_lineups(sqlite3* instance, bool& changed)
 
 	try {
 
+		//
+		// NOTE: This had to be broken up into a multi-step query involving a temp table to avoid a SQLite bug/feature
+		// wherein using a function (http_request in this case) as part of a column definition is reevaluated when
+		// that column is subsequently used as part of a WHERE clause:
+		//
+		// [http://mailinglists.sqlite.org/cgi-bin/mailman/private/sqlite-users/2015-August/061083.html]
+		//
+
 		// Discover the channel lineups for all available tuner devices; watch for results that return 'null'
-		execute_non_query(instance, "insert into discover_lineup select deviceid, http_request(json_extract(device.data, '$.LineupURL') || '?show=demo') "
-			"as json from device where device.type = 'tuner' and cast(json as text) <> 'null'");
+		execute_non_query(instance, "drop table if exists discover_lineup_temp");
+		execute_non_query(instance, "create temp table discover_lineup_temp as select deviceid, http_request(json_extract(device.data, '$.LineupURL') || '?show=demo') as json from device where device.type = 'tuner'");
+		execute_non_query(instance, "insert into discover_lineup select deviceid, json from discover_lineup_temp where cast(json as text) <> 'null'");
+		execute_non_query(instance, "drop table discover_lineup_temp");
 
 		// This requires a multi-step operation against the lineup table; start a transaction
 		execute_non_query(instance, "begin immediate transaction");
@@ -2726,6 +2767,14 @@ void http_request(sqlite3_context* context, int argc, sqlite3_value** argv)
 	const char* url = reinterpret_cast<const char*>(sqlite3_value_text(argv[0]));
 	if((url == nullptr) || (*url == 0)) return sqlite3_result_null(context);
 
+#if defined(_DEBUG) && defined(_WINDOWS)
+	// Duplicate HTTP query detection - typically caused by unintended reevaluation of a column
+	// generated by http_request() that is subsequently used in a WHERE clause
+	static std::string lasturl;
+	assert(strcmp(lasturl.c_str(), url) != 0);
+	lasturl.assign(url);
+#endif
+
 	// Create a write callback for libcurl to invoke to write the data
 	auto write_function = [](void const* data, size_t size, size_t count, void* userdata) -> size_t {
 
@@ -2998,9 +3047,9 @@ sqlite3* open_database(char const* connstring, int flags, bool initialize)
 		result = sqlite3_create_function_v2(instance, "get_season_number", 1, SQLITE_UTF8 | SQLITE_DETERMINISTIC, nullptr, get_season_number, nullptr, nullptr, nullptr);
 		if(result != SQLITE_OK) throw sqlite_exception(result);
 
-		// scalar function: http_request
+		// scalar function: http_request (non-deterministic)
 		//
-		result = sqlite3_create_function_v2(instance, "http_request", -1, SQLITE_UTF8 | SQLITE_DETERMINISTIC, nullptr, http_request, nullptr, nullptr, nullptr);
+		result = sqlite3_create_function_v2(instance, "http_request", -1, SQLITE_UTF8, nullptr, http_request, nullptr, nullptr, nullptr);
 		if(result != SQLITE_OK) throw sqlite_exception(result);
 
 		// scalar function: url_encode
